# appyratus

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py  tmp.py
.embryo/: context.json
appyratus/: __init__.py  const.py  constants.py  enum.py  env.py  exc.py  exe.py  file.py  graphql.py  gui.py  json.py  logging.py  patch.py  readme.md  schema.py  tk.py  usage.py  yaml.py
appyratus/async/: http.py
appyratus/asynchronous/: __init__.py  http.py
appyratus/cli/: __init__.py  arg.py  cli_program.py  console.py  crud.py  main.py  parser.py  subparser.py
appyratus/decorators/: __init__.py  memoized_property.py  readme.md
appyratus/fe/: readme.md  tk.py
appyratus/files/: __init__.py  base.py  css.py  csv.py  file.py  html.py  ini.py  json.py  markdown.py  python.py  shell.py  text.py  xml.py  yaml.py
appyratus/grpc/: readme.md
appyratus/io/: __init__.py  environment.py  file_types.py  readme.md
appyratus/json/: json_encoder.py
appyratus/reflection/: __init__.py  ast_parser.py  python_ast.py
appyratus/schema/: __init__.py  exc.py  fields.py  schema.py
appyratus/test/: __init__.py  base_tests.py  file_type_tests.py  mark.py
appyratus/time/: __init__.py  helper_functions.py  readme.md
appyratus/types/: __init__.py  dict_accessor.py  file_types.py  readme.md  type_code.py
appyratus/util/: __init__.py  argz.py  async_http_client.py  bizobj_util.py  dict_utils.py  environment.py  setup.py  template_utils.py  text_transform.py
appyratus/utils/: __init__.py  color_utils.py  dict_utils.py  file_utils.py  func_utils.py  list_utils.py  path_utils.py  string_utils.py  sys_utils.py  template_utils.py  time_utils.py  type_utils.py  url_utils.py
appyratus/validation/: __init__.py  fields.py  readme.md  schema.py
docs/: cli.py
tests/: conftest.py  test_DirtyDict.py  test_Field.py  test_GrpcDriver.py  test_GrpcService.py  test_JsonPatch.py  test_Schema.py  test_ast_parser.py  test_cli.py  test_dict_utils.py  test_list_utils.py  test_python_file.py  test_string_utils.py  test_text_transform.py
tests/files/: test_json.py  test_python_module.py  test_yaml.py
tests/schema/: test_fields.py
tests/utils/: test_color_utils.py  test_dict_utils.py  test_list_utils.py  test_path_utils.py  test_string_utils.py  (+2 more)
(+30 files in other folders)
