[metadata]
name = appyratus
description = Not your momma's Python toolkit
long_description = file: README.md
long_description_content_type = text/markdown
version = 2.0.6
author = Gigaquads
author_email = notdsk@gmail.com
url = https://github.com/gigaquads/appyratus.git
keywords = 
	
classifiers = 
	Programming Language :: Python :: 3.8
	License :: OSI Approved :: MIT License

[options]
scripts = 
	
dependency_links = 
	
packages = find:
install_requires = 
	ipython
	pytest
	python_dateutil
	pyyaml
	pytz
	uvloop
	jinja2
	python_rapidjson
	aiohttp==3.6.2
	bcrypt
	inflect
	beautifulsoup4
	astor
	webcolors
	colormath
	yapf
	faker
	jsbeautifier
