[metadata]
name = appyratus
description = Not your momma's Python toolkit
long_description = file: README.md
long_description_content_type = text/markdown
version = 3.0.4
author = Gigaquads
author_email = what@gigaquads.com
url = https://github.com/gigaquads/appyratus.git
keywords = 
	
classifiers = 
	Programming Language :: Python :: 3.9
	License :: OSI Approved :: MIT License

[options]
scripts = 
	
dependency_links = 
	
packages = find:
install_requires = 
	ipython==7.19.0
	pytest==6.1.2
	python_dateutil==2.8.1
	pyyaml==5.4.1
	pytz==2020.4
	uvloop==0.14.0
	jinja2==2.11.1
	python_rapidjson==0.9.4
	aiohttp==3.6.2
	bcrypt==3.2.0
	inflect==5.0.2
	beautifulsoup4==4.9.3
	astor==0.8.1
	webcolors==1.11.1
	colormath==3.0.0
	yapf==0.30.0
	faker==5.0.1
	jsbeautifier==1.13.0
	mistune==2.0.0rc1
	MarkupSafe==2.0.1
